--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ p,h2, h1{
 
 h1{
   font-size: 3rem;
+  background-color:rgb(238, 234, 234);
 }
 
 h2{
@@ -34,3 +35,15 @@ input:valid+span::after {
   font-weight: 800;
 }
 
+label{
+  font-size: 1.65rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 200;
+  /* color: blueviolet; */
+}
+
+input{
+  color: blue;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
