--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
 
 .message1202{
-  padding: 2rem;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
+  background-color: white;
 }
 
 #disclaimer1202{
-  /* text-align: center; */
   font-size: 1.2rem;
   color: rgb(112, 100, 100);
 }
@@ -13,11 +12,14 @@
 
 p,h2, h1{
   text-align: center;
+  padding: 5px;
 }
 
 h1{
   font-size: 3rem;
-  background-color:rgb(238, 234, 234);
+  background-color:#33C3F0;
+  border-radius: 40px;
+  color: #FFF;
 }
 
 h2{
@@ -45,4 +47,9 @@ input{
   color: blue;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.button-primary{
+  border-radius: 20px;
+  
 }
